--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div>
             <nav>
                 <ul>
-                    <li><a href="page1.html">Студія</a></li>
+                    <li><a href="index.html">Студія</a></li>
                     <li><a href="page2.html">Портфоліо</a></li>
                     <li><a href="page3.html">Контакти</a></li>
                 </ul>
