--- a/page2.html
+++ b/page2.html
@@ -56,33 +56,40 @@
                 <p>Маркетинг</p>
             </li>
             <li>
-                 <img src="" alt="">
-                <h2></h2>
-                <p></p>
+                 <img src="images1/box.png" alt="boxes">
+                <h2>Проєкт Boxes</h2>
+                <p>Додаток</p>
             </li>
             <li>
-                 <img src="" alt="">
-                <h2></h2>
-                <p></p>
+                 <img src="images1/pk.png" alt="pk">
+                <h2>Inspiration has no Borders</h2>
+                <p>Веб-сайт</p>
             </li>
             <li>
-                 <img src="" alt="">
-                <h2></h2>
-                <p></p>
+                 <img src="images1/lemite.png" alt="lemite">
+                <h2>Видання Limited Edition</h2>
+                <p>Дизайн</p>
             </li>
             <li>
-                 <img src="" alt="">
-                <h2></h2>
-                <p></p>
+                 <img src="images1/labetag.png" alt="labetag">
+                <h2>Проєкт LAB</h2>
+                <p>Маркетинг</p>
             </li>
             <li>
-                 <img src="" alt="">
-                <h2></h2>
-                <p></p>
+                 <img src="images1/laptop.png" alt="laptop">
+                <h2>Growing Business</h2>
+                <p>Додаток</p>
             </li>
         </ul>
-
     </main>
+<footer>
+    <ul>
+        <li><p>WebStudio</p></li>
+        <li><p>м. Київ, пр-т Лесі Українки, 26</p></li>
+        <li><a href="mailto:info@example.com">info@example.com</a></li>
+        <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+    </ul>
+</footer>
 </body>
 
 </html>
