--- a/page2.html
+++ b/page2.html
@@ -19,9 +19,13 @@
                 </li>
                 <li><a href="page2.html">Портфоліо</a></li>
                 <li><a href="page3.html">Контакти</a></li>
+            </ul>
+            <ul>
                 <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
                 <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
             </ul>
+
+
         </nav>
     </header>
     <main>
@@ -36,60 +40,65 @@
         </nav>
         <ul>
             <li>
-                <img src="images1/laptop1.png" alt="Website">
+                <img src="./fotos/laptop.png" alt="Website">
                 <h2>Технокряк</h2>
                 <p>Веб-сайт</p>
             </li>
             <li>
-                 <img src="images1/basketball.png" alt="basketball">
+                <img src="./images1/basketball.png" alt="basketball">
                 <h2>Постер New Orlean vs Golden Star</h2>
                 <p>Дизайн</p>
             </li>
             <li>
-                 <img src="images1/restoran.png" alt="restoran">
+                <img src="./images1/restoran.png" alt="restoran">
                 <h2>Ресторан Seafood</h2>
                 <p>Додаток</p>
             </li>
             <li>
-                 <img src="images1/headphones.png" alt="headphones">
+                <img src="./images1/headphones.png" alt="headphones">
                 <h2>Проєкт Prime</h2>
                 <p>Маркетинг</p>
             </li>
             <li>
-                 <img src="images1/box.png" alt="boxes">
+                <img src="./images1/box.png" alt="boxes">
                 <h2>Проєкт Boxes</h2>
                 <p>Додаток</p>
             </li>
             <li>
-                 <img src="images1/pk.png" alt="pk">
+                <img src="./images1/pk.png" alt="pk">
                 <h2>Inspiration has no Borders</h2>
                 <p>Веб-сайт</p>
             </li>
             <li>
-                 <img src="images1/lemite.png" alt="lemite">
+                <img src="./images1/lemite.png" alt="lemite">
                 <h2>Видання Limited Edition</h2>
                 <p>Дизайн</p>
             </li>
             <li>
-                 <img src="images1/labetag.png" alt="labetag">
+                <img src="./images1/labetag.png" alt="labetag">
                 <h2>Проєкт LAB</h2>
                 <p>Маркетинг</p>
             </li>
             <li>
-                 <img src="images1/laptop.png" alt="laptop">
+                <img src="./images1/laptop.png" alt="laptop">
                 <h2>Growing Business</h2>
                 <p>Додаток</p>
             </li>
         </ul>
     </main>
-<footer>
-    <ul>
-        <li><p>WebStudio</p></li>
-        <li><p>м. Київ, пр-т Лесі Українки, 26</p></li>
-        <li><a href="mailto:info@example.com">info@example.com</a></li>
-        <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
-    </ul>
-</footer>
+    <footer>
+        <ul>
+            <li>
+                <p>WebStudio</p>
+            </li>
+            <li>
+                <p>м. Київ, пр-т Лесі Українки, 26</p>
+            </li>
+            <address>
+                <li><a href="mailto:info@example.com">info@example.com</a></li>
+                <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+            </address>
+        </ul>
+    </footer>
 </body>
-
 </html>
