--- a/page2.html
+++ b/page2.html
@@ -15,10 +15,10 @@
                     <p>WebStudio</p>
                 </li>
                 <li>
-                    <a href="page1.html">Студія</a>
+                    <a href="./index.html">Студія</a>
                 </li>
-                <li><a href="page2.html">Портфоліо</a></li>
-                <li><a href="page3.html">Контакти</a></li>
+                <li><a href="./page2.html">Портфоліо</a></li>
+                <li><a href="./page3.html">Контакти</a></li>
             </ul>
             <ul>
                 <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
@@ -94,10 +94,12 @@
             <li>
                 <p>м. Київ, пр-т Лесі Українки, 26</p>
             </li>
-            <address>
-                <li><a href="mailto:info@example.com">info@example.com</a></li>
-                <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+            <li>
+                 <address>
+                <a href="mailto:info@example.com">info@example.com</a>
+                <a href="tel:+380961111111">+38 096 111 11 11</a>
             </address>
+            </li>
         </ul>
     </footer>
 </body>
