--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
 
 <body>
     <header>
-        <h2>WebStudio</h2>
+        <p>WebStudio</p>
 
         <nav>
             <ul>
-                <li><a href="index.html">Студія</a></li>
-                <li><a href="page2.html">Портфоліо</a></li>
-                <li><a href="page3.html">Контакти</a></li>
+                <li><a href="./index.html">Студія</a></li>
+                <li><a href="./page2.html">Портфоліо</a></li>
+                <li><a href="./page3.html">Контакти</a></li>
             </ul>
         </nav>
 
@@ -23,9 +23,6 @@
             <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
             <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
         </ul>
-
-
-
     </header>
     <main>
         <section>
@@ -57,7 +54,7 @@
         <section>
             <h2>Чим ми займаємося</h2>
             <ul>
-                <li> <img src=".fotos/laptop.png" alt="Foto"></li>
+                <li> <img src="./fotos/laptop.png" alt="Foto"></li>
                 <li> <img src="./fotos/telefon.png" alt="Foto"></li>
                 <li> <img src="./fotos/tablet.png" alt="Foto"></li>
             </ul>
