--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="./css/styles.css">
 </head>
 
 <body>
     <header>
-        <p>WebStudio</p>
-
+        <p style="color: rgb(0, 0, 255);">Web<span style="color: black;">Studio</span></p>
         <nav>
             <ul>
                 <li><a href="./index.html">Студія</a></li>
@@ -27,26 +27,26 @@
     <main>
         <section>
             <h1>Ефективні рішення для вашого бізнесу</h1>
-            <button type="button">Замовити послугу</button>
+            <button class="akvi" type="button">Замовити послугу</button>
         </section>
         <section>
 
             <ul>
                 <li>
                     <h2>УВАГА ДО ДЕТАЛЕЙ</h2>
-                    <p>Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
+                    <p  class="b">Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
                 </li>
                 <li>
-                    <p>ПУНКТУАЛЬНІСТЬ</p>
+                    <p class="b">ПУНКТУАЛЬНІСТЬ</p>
                     <h2>Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</h2>
                 </li>
                 <li>
-                    <p>ПЛАНУВАННЯ</p>
-                    <h2>Так само консультація з широким активом значною мірою зумовлює.</h2>
+                    <h2 >ПЛАНУВАННЯ</h2>
+                    <p class="b">Так само консультація з широким активом значною мірою зумовлює.</p>
                 </li>
                 <li>
                     <h2>СУЧАСНІ ТЕХНОЛОГІЇ</h2>
-                    <p>Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
+                    <p class="b">Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
                 </li>
             </ul>
 
@@ -88,7 +88,7 @@
 
     </main>
     <footer>
-        <p>WebStudio</p>
+          <p style="color: rgb(0, 0, 255);">Web<span style="color: black;">Studio</span></p>
         <p> м. Київ, пр-т Лесі Українки, 26</p>
         <address>
             <a href="mailto:info@devstudio.com">info@devstudio.com</a><br>
