--- a/page2.html
+++ b/page2.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="./css/page2.css">
 </head>
 
 <body>
@@ -12,7 +13,7 @@
         <nav>
             <ul>
                 <li>
-                    <p>WebStudio</p>
+                      <p style="color: rgb(0, 0, 255);">Web<span style="color: black;">Studio</span></p>
                 </li>
                 <li>
                     <a href="./index.html">Студія</a>
@@ -85,7 +86,7 @@
         </ul>
     </main>
     <footer>
-        <p>WebStudio</p>
+          <p style="color: rgb(0, 0, 255);">Web<span style="color: black;">Studio</span></p>
         <p>м. Київ, пр-т Лесі Українки, 26</p>
         <address>
             <a href="mailto:info@example.com">info@example.com</a>
