--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+  
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="./css/styles.css">
 </head>
 
@@ -25,28 +30,28 @@
         </ul>
     </header>
     <main>
-        <section>
-            <h1>Ефективні рішення для вашого бізнесу</h1>
-            <button class="akvi" type="button">Замовити послугу</button>
+        <section class="base">
+            <h1 class="family">Ефективні рішення для вашого бізнесу</h1>
+            <button class="button" type="button">Замовити послугу</button>
         </section>
         <section>
 
             <ul>
                 <li>
                     <h2>УВАГА ДО ДЕТАЛЕЙ</h2>
-                    <p  class="b">Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
+                    <p>Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
                 </li>
                 <li>
-                    <p class="b">ПУНКТУАЛЬНІСТЬ</p>
+                    <p>ПУНКТУАЛЬНІСТЬ</p>
                     <h2>Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</h2>
                 </li>
                 <li>
                     <h2 >ПЛАНУВАННЯ</h2>
-                    <p class="b">Так само консультація з широким активом значною мірою зумовлює.</p>
+                    <p >Так само консультація з широким активом значною мірою зумовлює.</p>
                 </li>
                 <li>
                     <h2>СУЧАСНІ ТЕХНОЛОГІЇ</h2>
-                    <p class="b">Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
+                    <p >Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
                 </li>
             </ul>
 
@@ -54,30 +59,30 @@
         <section>
             <h2>Чим ми займаємося</h2>
             <ul>
-                <li> <img src="./fotos/laptop.png" alt="Foto"></li>
-                <li> <img src="./fotos/telefon.png" alt="Foto"></li>
-                <li> <img src="./fotos/tablet.png" alt="Foto"></li>
+                <li> <img width="370" src="./fotos/laptop.png" alt="Foto"></li>
+                <li> <img width="370" src="./fotos/telefon.png" alt="Foto"></li>
+                <li> <img width="370" src="./fotos/tablet.png" alt="Foto"></li>
             </ul>
         </section>
         <section>
             <h2>Наша команда</h2>
             <ul>
                 <li>
-                    <img src="./fotos/man.png" alt="Foto">
+                    <img width="270" src="./fotos/man.png" alt="Foto">
                     <h3>Ігор Дем'яненко</h3>
                     <p>Product Designer</p>
                 </li>
                 <li>
-                    <img src="./fotos/woman.jpg" alt="Foto">
+                    <img width="270" src="./fotos/woman.jpg" alt="Foto">
                     <h3>Ольга Рєпіна</h3>
                     <p>Frontend Developer</p>
                 </li>
-                <li><img src="./fotos/man2.png" alt="Foto">
+                <li><img width="270" src="./fotos/man2.png" alt="Foto">
                     <h3>Микола Тарасов</h3>
                     <p>Marketing</p>
                 </li>
                 <li>
-                    <img src="./fotos/man3.png" alt="Foto">
+                    <img width="270" src="./fotos/man3.png" alt="Foto">
                     <h6>Михайло Єрмаков</h6>
                     <p>UI Designer</p>
                 </li>
@@ -89,8 +94,8 @@
     </main>
     <footer>
           <p style="color: rgb(0, 0, 255);">Web<span style="color: black;">Studio</span></p>
-        <p> м. Київ, пр-т Лесі Українки, 26</p>
         <address>
+            <p> м. Київ, пр-т Лесі Українки, 26</p>
             <a href="mailto:info@devstudio.com">info@devstudio.com</a><br>
             <a href="tel:+380961111111">+38 096 111 11 11</a>
         </address>
