--- a/page2.html
+++ b/page2.html
@@ -6,6 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="./css/page2.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&family=Tajawal:wght@200;300;400;500;700;800;900&family=Tangerine:wght@400;700&display=swap"
+        rel="stylesheet">
 </head>
 
 <body>
@@ -13,7 +18,7 @@
         <nav>
             <ul>
                 <li>
-                      <p style="color: rgb(0, 0, 255);">Web<span style="color: black;">Studio</span></p>
+                    <p style="color: rgb(0, 0, 255);">Web<span style="color: black;">Studio</span></p>
                 </li>
                 <li>
                     <a href="./index.html">Студія</a>
@@ -86,7 +91,7 @@
         </ul>
     </main>
     <footer>
-          <p style="color: rgb(0, 0, 255);">Web<span style="color: black;">Studio</span></p>
+        <p style="color: rgb(0, 0, 255);">Web<span style="color: black;">Studio</span></p>
         <p>м. Київ, пр-т Лесі Українки, 26</p>
         <address>
             <a href="mailto:info@example.com">info@example.com</a>
@@ -94,5 +99,4 @@
         </address>
     </footer>
 </body>
-
 </html>
