--- a/page2.html
+++ b/page2.html
@@ -9,7 +9,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
-        href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&family=Tajawal:wght@200;300;400;500;700;800;900&family=Tangerine:wght@400;700&display=swap"
+        href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100..900;1,100..900&family=Tajawal:wght@200;300;400;500;700;800;900&family=Tangerine:wght@400;700&display=swap"
         rel="stylesheet">
 </head>
 
@@ -18,7 +18,7 @@
         <nav>
             <ul>
                 <li>
-                    <p style="color: rgb(0, 0, 255);">Web<span style="color: black;">Studio</span></p>
+                    <p class="logo" style="color: rgb(0, 0, 255);">Web<span style="color: black;">Studio</span></p>
                 </li>
                 <li>
                     <a href="./index.html">Студія</a>
@@ -91,7 +91,7 @@
         </ul>
     </main>
     <footer>
-        <p style="color: rgb(0, 0, 255);">Web<span style="color: black;">Studio</span></p>
+        <p class="logo" style="color: rgb(0, 0, 255);">Web<span style="color: black;">Studio</span></p>
         <p>м. Київ, пр-т Лесі Українки, 26</p>
         <address>
             <a href="mailto:info@example.com">info@example.com</a>
@@ -99,4 +99,5 @@
         </address>
     </footer>
 </body>
+
 </html>
