--- a/index.html
+++ b/index.html
@@ -5,107 +5,111 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
         href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
-        rel="stylesheet">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link
-        href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100..900;1,100..900&family=Tajawal:wght@200;300;400;500;700;800;900&family=Tangerine:wght@400;700&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="./css/styles.css">
 </head>
 
 <body>
     <header class="header">
-        <p class="logo" style="color: rgb(0, 0, 255);">Web<span style="color: black;">Studio</span></p>
-        <nav class="topnav">
-            <ul class="headerlist">
-                <li><a href="./index.html">Студія</a></li>
-                <li><a href="./page2.html">Портфоліо</a></li>
-                <li><a href="./page3.html">Контакти</a></li>
-            </ul>
-        </nav>
+        <div class="container">
+            <p class="logo" style="color: rgb(0, 0, 255);">Web<span style="color: black;">Studio</span></p>
+            <nav class="topnav">
+                <ul class="headerlist">
+                    <li><a href="./index.html">Студія</a></li>
+                    <li><a href="./page2.html">Портфоліо</a></li>
+                    <li><a href="./page3.html">Контакти</a></li>
+                </ul>
+            </nav>
 
-        <ul class="secheaderlist">
-            <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-            <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
-        </ul>
+            <ul class="secheaderlist">
+                <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+            </ul>
+        </div>
     </header>
     <main class="main">
+        <div class="container">
         <section class="base">
             <h1 class="family">Ефективні рішення для вашого бізнесу</h1>
             <button class="button" type="button">Замовити послугу</button>
+            </div>
         </section>
         <section>
-
-            <ul class="Uvaga">
-                <li>
-                    <h2>УВАГА ДО ДЕТАЛЕЙ</h2>
-                    <p>Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
-                </li>
-                <li>
-                    <p>ПУНКТУАЛЬНІСТЬ</p>
-                    <h2>Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</h2>
-                </li>
-                <li>
-                    <h2>ПЛАНУВАННЯ</h2>
-                    <p>Так само консультація з широким активом значною мірою зумовлює.</p>
-                </li>
-                <li>
-                    <h2>СУЧАСНІ ТЕХНОЛОГІЇ</h2>
-                    <p>Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
-                </li>
-            </ul>
-
+            <div class="container">
+                <ul class="Uvaga">
+                    <li>
+                        <h2>УВАГА ДО ДЕТАЛЕЙ</h2>
+                        <p>Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
+                    </li>
+                    <li>
+                        <h2>ПУНКТУАЛЬНІСТЬ</h2>
+                        <p>Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
+                    </li>
+                    <li>
+                        <h2>ПЛАНУВАННЯ</h2>
+                        <p>Так само консультація з широким активом значною мірою зумовлює.</p>
+                    </li>
+                    <li>
+                        <h2>СУЧАСНІ ТЕХНОЛОГІЇ</h2>
+                        <p>Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
+                    </li>
+                </ul>
+            </div>
         </section>
         <section class="section2">
-            <h2 class="chim">Чим ми займаємося</h2>
-            <ul class="img">
-                <li> <img width="370" src="./fotos/laptop.png" alt="Foto"></li>
-                <li> <img width="370" src="./fotos/telefon.png" alt="Foto"></li>
-                <li> <img width="370" src="./fotos/tablet.png" alt="Foto"></li>
-            </ul>
+            <div class="container">
+                <h2 class="chim">Чим ми займаємося</h2>
+                <ul class="img">
+                    <li> <img src="./fotos/laptop.png" alt="Foto"></li>
+                    <li> <img src="./fotos/telefon.png" alt="Foto"></li>
+                    <li> <img src="./fotos/tablet.png" alt="Foto"></li>
+                </ul>
+            </div>
         </section>
         <section class="section3">
-            <h2 class="ourt">Наша команда</h2>
-            <ul class="our team">
-                <li>
-                    <img width="270" src="./fotos/man.png" alt="Foto">
-                    <h3>Ігор Дем'яненко</h3>
-                    <p>Product Designer</p>
-                </li>
-                <li>
-                    <img width="270" src="./fotos/woman.jpg" alt="Foto">
-                    <h3>Ольга Рєпіна</h3>
-                    <p>Frontend Developer</p>
-                </li>
-                <li><img width="270" src="./fotos/man2.png" alt="Foto">
-                    <h3>Микола Тарасов</h3>
-                    <p>Marketing</p>
-                </li>
-                <li>
-                    <img width="270" src="./fotos/man3.png" alt="Foto">
-                    <h6>Михайло Єрмаков</h6>
-                    <p>UI Designer</p>
-                </li>
-            </ul>
-
-
+            <div class="container">
+                <h2 class="ourt">Наша команда</h2>
+                <ul class="ourteam">
+                    <li>
+                        <img  src="./fotos/man.png" alt="Foto">
+                        <h3>Ігор Дем'яненко</h3>
+                        <p>Product Designer</p>
+                    </li>
+                    <li>
+                        <img src="./fotos/woman.jpg" alt="Foto">
+                        <h3>Ольга Рєпіна</h3>
+                        <p>Frontend Developer</p>
+                    </li>
+                    <li><img width="270" src="./fotos/man2.png" alt="Foto">
+                        <h3>Микола Тарасов</h3>
+                        <p>Marketing</p>
+                    </li>
+                    <li>
+                        <img width="270" src="./fotos/man3.png" alt="Foto">
+                        <h6>Михайло Єрмаков</h6>
+                        <p>UI Designer</p>
+                    </li>
+                </ul>
+            </div>
         </section>
 
     </main>
     <footer class="footer">
-        <p class="logo" style="color: rgb(0, 0, 255);">Web<span style="color: black;">Studio</span></p>
-        <address class="footer adr">
-            <p> м. Київ, пр-т Лесі Українки, 26</p>
-            <a href="mailto:info@devstudio.com">info@devstudio.com</a><br>
-            <a href="tel:+380961111111">+38 096 111 11 11</a>
-        </address>
+        <div class="container">
+            <p class="logo" style="color: rgb(0, 0, 255);">Web<span style="color: black;">Studio</span></p>
+            <address class="footer adr">
+                <p> м. Київ, пр-т Лесі Українки, 26</p>
+                <a href="mailto:info@devstudio.com">info@devstudio.com</a><br>
+                <a href="tel:+380961111111">+38 096 111 11 11</a>
+            </address>
     </footer>
+    </div>
 </body>
 
 </html>
