--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
         rel="stylesheet">
+        <link rel="stylesheet" href="./css/reset.css">
     <link rel="stylesheet" href="./css/styles.css">
 </head>
 
@@ -21,9 +22,9 @@
             <p class="logo" style="color: rgb(0, 0, 255);">Web<span style="color: black;">Studio</span></p>
             <nav class="topnav">
                 <ul class="headerlist">
-                    <li><a href="./index.html">Студія</a></li>
-                    <li><a href="./page2.html">Портфоліо</a></li>
-                    <li><a href="./page3.html">Контакти</a></li>
+                    <li class="e"><a href="./index.html">Студія</a></li>
+                    <li class="s"><a href="./page2.html">Портфоліо</a></li>
+                    <li class="w"><a href="./page3.html">Контакти</a></li>
                 </ul>
             </nav>
 
