--- a/index.html
+++ b/index.html
@@ -12,89 +12,97 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
         rel="stylesheet">
-        <link rel="stylesheet" href="./css/reset.css">
+    <link rel="stylesheet" href="./css/reset.css">
     <link rel="stylesheet" href="./css/styles.css">
 </head>
 
 <body>
     <header class="header">
         <div class="container">
-            <p class="logo" style="color: rgb(0, 0, 255);">Web<span style="color: black;">Studio</span></p>
+            <p class="header-logo" style="color: rgb(0, 0, 255);">Web<span style="color: black;">Studio</span></p>
             <nav class="topnav">
-                <ul class="headerlist">
-                    <li class="e"><a href="./index.html">Студія</a></li>
-                    <li class="s"><a href="./page2.html">Портфоліо</a></li>
-                    <li class="w"><a href="./page3.html">Контакти</a></li>
+                <ul class="header-list">
+                    <li class="header-li"><a class="header-a" class="header-a-ho" class="header-a-ho"
+                            href="./index.html">Студія</a></li>
+                    <li class="header-li"><a class="header-a" class="header-a-ho" href="./page2.html">Портфоліо</a></li>
+                    <li class="header-li"><a class="header-a" class="header-a-ho" href="./page3.html">Контакти</a></li>
                 </ul>
             </nav>
 
-            <ul class="secheaderlist">
-                <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+            <ul class="header-nav">
+                <li class="header-li"><a class="header-mailto" class="header-mailto-ho"
+                        href="mailto:info@devstudio.com">info@devstudio.com</a>
+                </li>
+                <li class="header-li"><a class="header-tel" class="header-tel-ho" href="tel:+380961111111">+38 096 111
+                        11 11</a></li>
             </ul>
         </div>
     </header>
     <main class="main">
         <div class="container">
-        <section class="base">
-            <h1 class="family">Ефективні рішення для вашого бізнесу</h1>
-            <button class="button" type="button">Замовити послугу</button>
-            </div>
+            <section id="section1" class="main-base">
+                <h1 class="main-h1">Ефективні рішення для вашого бізнесу</h1>
+                <button class="main-button" type="button">Замовити послугу</button>
+        </div>
         </section>
-        <section>
+        <section id="section2" class="Uvahasec">
             <div class="container">
                 <ul class="Uvaga">
-                    <li>
-                        <h2>УВАГА ДО ДЕТАЛЕЙ</h2>
-                        <p>Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
+                    <li class="Uvaga-li">
+                        <h2 class="Uvaga-h2">УВАГА ДО ДЕТАЛЕЙ</h2>
+                        <p class="Uvaga-p">Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.
+                        </p>
                     </li>
-                    <li>
-                        <h2>ПУНКТУАЛЬНІСТЬ</h2>
-                        <p>Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
+                    <li class="Uvaga-li">
+                        <h2 class="Uvaga-h2">ПУНКТУАЛЬНІСТЬ</h2>
+                        <p class="Uvaga-p">Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.
+                        </p>
                     </li>
-                    <li>
-                        <h2>ПЛАНУВАННЯ</h2>
-                        <p>Так само консультація з широким активом значною мірою зумовлює.</p>
+                    <li class="Uvaga-li">
+                        <h2 class="Uvaga-h2">ПЛАНУВАННЯ</h2>
+                        <p class="Uvaga-p">Так само консультація з широким активом значною мірою зумовлює.</p>
                     </li>
-                    <li>
-                        <h2>СУЧАСНІ ТЕХНОЛОГІЇ</h2>
-                        <p>Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
+                    <li class="Uvaga-li">
+                        <h2 class="Uvaga-h2">СУЧАСНІ ТЕХНОЛОГІЇ</h2>
+                        <p class="Uvaga-p">Значимість цих проблем настільки очевидна, що реалізація планових завдань.
+                        </p>
                     </li>
                 </ul>
             </div>
         </section>
-        <section class="section2">
+        <section id="section3" class="section2">
             <div class="container">
-                <h2 class="chim">Чим ми займаємося</h2>
-                <ul class="img">
-                    <li> <img src="./fotos/laptop.png" alt="Foto"></li>
-                    <li> <img src="./fotos/telefon.png" alt="Foto"></li>
-                    <li> <img src="./fotos/tablet.png" alt="Foto"></li>
+                <h2 class="section2-chim">Чим ми займаємося</h2>
+                <ul class="section2-chim1">
+                    <li class="section2-li"> <img class="section2-img" src="./fotos/laptop.png" alt="Foto"></li>
+                    <li class="section2-li"> <img class="section2-img" src="./fotos/telefon.png" alt="Foto"></li>
+                    <li class="section2-li"> <img class="section2-img" src="./fotos/tablet.png" alt="Foto"></li>
                 </ul>
             </div>
         </section>
-        <section class="section3">
+        <section id="section3" class="section3">
             <div class="container">
-                <h2 class="ourt">Наша команда</h2>
-                <ul class="ourteam">
-                    <li>
-                        <img  src="./fotos/man.png" alt="Foto">
-                        <h3>Ігор Дем'яненко</h3>
-                        <p>Product Designer</p>
+                <h2 class="section3-ourt">Наша команда</h2>
+                <ul class="section3-ourteam">
+                    <li class="section3-li">
+                        <img class="section3-img" src="./fotos/man.png" alt="Foto">
+                        <h3 class="section3-h3">Ігор Дем'яненко</h3>
+                        <p class="section3-p">Product Designer</p>
                     </li>
-                    <li>
-                        <img src="./fotos/woman.jpg" alt="Foto">
-                        <h3>Ольга Рєпіна</h3>
-                        <p>Frontend Developer</p>
+                    <li class="section3-li1">
+                        <img class="section3-img" src="./fotos/woman.jpg" alt="Foto">
+                        <h3 class="section3-h3">Ольга Рєпіна</h3>
+                        <p class="section3-p">Frontend Developer</p>
                     </li>
-                    <li><img width="270" src="./fotos/man2.png" alt="Foto">
-                        <h3>Микола Тарасов</h3>
-                        <p>Marketing</p>
+                    <li class="section3-li">
+                        <img class="section3-img" src="./fotos/man2.png" alt="Foto">
+                        <h3 class="section3-h3">Микола Тарасов</h3>
+                        <p class="section3-p">Marketing</p>
                     </li>
-                    <li>
-                        <img width="270" src="./fotos/man3.png" alt="Foto">
-                        <h6>Михайло Єрмаков</h6>
-                        <p>UI Designer</p>
+                    <li class="section3-li">
+                        <img class="section3-img" src="./fotos/man3.png" alt="Foto">
+                        <h3 class="section3-h3">Михайло Єрмаков</h6>
+                        <p class="section3-p">UI Designer</p>
                     </li>
                 </ul>
             </div>
@@ -103,11 +111,11 @@
     </main>
     <footer class="footer">
         <div class="container">
-            <p class="logo" style="color: rgb(0, 0, 255);">Web<span style="color: black;">Studio</span></p>
-            <address class="footer adr">
-                <p> м. Київ, пр-т Лесі Українки, 26</p>
-                <a href="mailto:info@devstudio.com">info@devstudio.com</a><br>
-                <a href="tel:+380961111111">+38 096 111 11 11</a>
+            <p class="footer-logo" style="color: rgb(0, 0, 255);">Web<span style="color: rgb(255, 255, 255);">Studio</span></p>
+            <address class="footer-adr">
+                <p class="footer-p"> м. Київ, пр-т Лесі Українки, 26</p>
+                <a class="footer-mailto" href="mailto:info@devstudio.com">info@devstudio.com</a><br>
+                <a class="foter-tel" href="tel:+380961111111">+38 096 111 11 11</a>
             </address>
     </footer>
     </div>
