--- a/index.html
+++ b/index.html
@@ -13,13 +13,14 @@
         href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="./css/reset.css">
+    <link rel="stylesheet" href="./css/normalize.css">
     <link rel="stylesheet" href="./css/styles.css">
 </head>
 
 <body>
     <header class="header">
         <div class="container">
-            <p class="header-logo" style="color: rgb(0, 0, 255);">Web<span style="color: black;">Studio</span></p>
+            <p class="header-logo" style="color: #2196F3;">Web<span style="color: black;">Studio</span></p>
             <nav class="topnav">
                 <ul class="header-list">
                     <li class="header-li"><a class="header-a" class="header-a-ho" class="header-a-ho"
@@ -111,11 +112,11 @@
     </main>
     <footer class="footer">
         <div class="container">
-            <p class="footer-logo" style="color: rgb(0, 0, 255);">Web<span style="color: rgb(255, 255, 255);">Studio</span></p>
+            <p class="footer-logo" style="color: #2196F3;">Web<span style="color: rgb(255, 255, 255);">Studio</span></p>
             <address class="footer-adr">
                 <p class="footer-p"> м. Київ, пр-т Лесі Українки, 26</p>
                 <a class="footer-mailto" href="mailto:info@devstudio.com">info@devstudio.com</a><br>
-                <a class="foter-tel" href="tel:+380961111111">+38 096 111 11 11</a>
+                <a class="footer-tel" href="tel:+380961111111">+38 096 111 11 11</a>
             </address>
     </footer>
     </div>
