--- a/page2.html
+++ b/page2.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="./css/normalize.css">
+    <link rel="stylesheet" href="./css/reset.css">
     <link rel="stylesheet" href="./css/page2.css">
     <link
         href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
@@ -12,88 +14,88 @@
 </head>
 
 <body>
-    <header>
-        <nav>
-            <ul>
-                <li>
-                    <p class="logo" style="color: rgb(0, 0, 255);">Web<span style="color: black;">Studio</span></p>
+    <header class="header">
+        <nav class="header-nav">
+            <ul class="header-list">
+                <li class="header-li">
+                    <p class="header-logo" style="color: #2196F3;">Web<span style="color: #212121;">Studio</span></p>
                 </li>
-                <li>
-                    <a href="./index.html">Студія</a>
+                <li class="header-li">
+                    <a class="header-a" href="./index.html">Студія</a>
                 </li>
-                <li><a href="./page2.html">Портфоліо</a></li>
-                <li><a href="./page3.html">Контакти</a></li>
+                <li class="header-li"><a class="header-a" href="./page2.html">Портфоліо</a></li>
+                <li class="header-li"><a href="./page3.html">Контакти</a></li>
             </ul>
         </nav>
-        <ul>
-            <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-            <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+        <ul class="header-list">
+            <li class="header-li"><a class="header-mailto" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+            <li class="header-li"><a class="header-tel" href="tel:+380961111111">+38 096 111 11 11</a></li>
         </ul>
     </header>
-    <main>
-        <nav>
-            <ul>
-                <li><a href="">Усі</a></li>
-                <li><a href="">Веб-сайти</a></li>
-                <li><a href="">Додатки</a></li>
-                <li><a href="">Дизайн</a></li>
-                <li><a href="">Маркетинг</a></li>
+    <main class="main">
+        <nav class="main-nav">
+            <ul class="main-list">
+                <li class="main-li"><a href="">Усі</a></li>
+                <li class="main-li"><a href="">Веб-сайти</a></li>
+                <li class="main-li"><a href="">Додатки</a></li>
+                <li class="main-li"><a href="">Дизайн</a></li>
+                <li class="main-li"><a href="">Маркетинг</a></li>
             </ul>
         </nav>
-        <ul>
-            <li>
-                <img src="./fotos/laptop.png" alt="Website">
-                <h2>Технокряк</h2>
-                <p>Веб-сайт</p>
+        <ul class="main-list">
+            <li class="main-li">
+                <img class="main-img" src="./fotos/laptop.png" alt="Website">
+                <h2 class="main-h2">Технокряк</h2>
+                <p class="main-p">Веб-сайт</p>
             </li>
-            <li>
-                <img src="./images1/basketball.png" alt="basketball">
-                <h2>Постер New Orlean vs Golden Star</h2>
-                <p>Дизайн</p>
+            <li class="main-li">
+                <img class="main-img" src="./images1/basketball.png" alt="basketball">
+                <h2 class="main-h2">Постер New Orlean vs Golden Star</h2>
+                <p class="main-p">Дизайн</p>
             </li>
-            <li>
-                <img src="./images1/restoran.png" alt="restoran">
-                <h2>Ресторан Seafood</h2>
-                <p>Додаток</p>
+            <li class="main-li">
+                <img class="main-img" src="./images1/restoran.png" alt="restoran">
+                <h2 class="main-h2">Ресторан Seafood</h2>
+                <p class="main-p">Додаток</p>
             </li>
-            <li>
-                <img src="./images1/headphones.png" alt="headphones">
-                <h2>Проєкт Prime</h2>
-                <p>Маркетинг</p>
+            <li class="main-li">
+                <img class="main-img" src="./images1/headphones.png" alt="headphones">
+                <h2 class="main-h2">Проєкт Prime</h2>
+                <p class="main-p">Маркетинг</p>
             </li>
-            <li>
-                <img src="./images1/box.png" alt="boxes">
-                <h2>Проєкт Boxes</h2>
-                <p>Додаток</p>
+            <li class="main-li">
+                <img class="main-img" src="./images1/box.png" alt="boxes">
+                <h2 class="main-h2">Проєкт Boxes</h2>
+                <p class="main-p">Додаток</p>
             </li>
-            <li>
-                <img src="./images1/pk.png" alt="pk">
-                <h2>Inspiration has no Borders</h2>
-                <p>Веб-сайт</p>
+            <li class="main-li">
+                <img class="main-img" src="./images1/pk.png" alt="pk">
+                <h2 class="main-h2">Inspiration has no Borders</h2>
+                <p class="main-p">Веб-сайт</p>
             </li>
-            <li>
-                <img src="./images1/lemite.png" alt="lemite">
-                <h2>Видання Limited Edition</h2>
-                <p>Дизайн</p>
+            <li class="main-li">
+                <img class="main-img" src="./images1/lemite.png" alt="lemite">
+                <h2 class="main-h2">Видання Limited Edition</h2>
+                <p class="main-p">Дизайн</p>
             </li>
-            <li>
-                <img src="./images1/labetag.png" alt="labetag">
-                <h2>Проєкт LAB</h2>
-                <p>Маркетинг</p>
+            <li class="main-li">
+                <img class="main-img" src="./images1/labetag.png" alt="labetag">
+                <h2 class="main-h2">Проєкт LAB</h2>
+                <p class="main-p">Маркетинг</p>
             </li>
-            <li>
-                <img src="./images1/laptop.png" alt="laptop">
-                <h2>Growing Business</h2>
-                <p>Додаток</p>
+            <li class="main-li">
+                <img class="main-img" src="./images1/laptop.png" alt="laptop">
+                <h2 class="main-h2">Growing Business</h2>
+                <p class="main-p">Додаток</p>
             </li>
         </ul>
     </main>
-    <footer>
-        <p class="logo" style="color: rgb(0, 0, 255);">Web<span style="color: black;">Studio</span></p>
-        <p>м. Київ, пр-т Лесі Українки, 26</p>
-        <address>
-            <a href="mailto:info@example.com">info@example.com</a>
-            <a href="tel:+380961111111">+38 096 111 11 11</a>
+    <footer class="footer">
+        <p class="footer-logo" style="color: #2196F3;">Web<span style="color: #212121;">Studio</span></p>
+        <p class="footer-">м. Київ, пр-т Лесі Українки, 26</p>
+        <address class="address">
+            <a class="footer-mailto" href="mailto:info@example.com">info@example.com</a>
+            <a class="footer-tel" href="tel:+380961111111">+38 096 111 11 11</a>
         </address>
     </footer>
 </body>
