--- a/page2.html
+++ b/page2.html
@@ -20,11 +20,9 @@
                 <li class="header-li">
                     <p class="header-logo" style="color: #2196F3;">Web<span style="color: #212121;">Studio</span></p>
                 </li>
-                <li class="header-li">
-                    <a class="header-a" href="./index.html">Студія</a>
-                </li>
+                <li class="header-li"> <a class="header-a" href="./index.html">Студія</a></li>
                 <li class="header-li"><a class="header-a" href="./page2.html">Портфоліо</a></li>
-                <li class="header-li"><a href="./page3.html">Контакти</a></li>
+                <li class="header-li"><a class="header-a" href="./page3.html">Контакти</a></li>
             </ul>
         </nav>
         <ul class="header-list">
@@ -35,11 +33,11 @@
     <main class="main">
         <nav class="main-nav">
             <ul class="main-list">
-                <li class="main-li"><a href="">Усі</a></li>
-                <li class="main-li"><a href="">Веб-сайти</a></li>
-                <li class="main-li"><a href="">Додатки</a></li>
-                <li class="main-li"><a href="">Дизайн</a></li>
-                <li class="main-li"><a href="">Маркетинг</a></li>
+                <li class="main-li"><a class="main-a" href="">Усі</a></li>
+                <li class="main-li"><a class="main-a" href="">Веб-сайти</a></li>
+                <li class="main-li"><a class="main-a" href="">Додатки</a></li>
+                <li class="main-li"><a class="main-a" href="">Дизайн</a></li>
+                <li class="main-li"><a class="main-a" href="">Маркетинг</a></li>
             </ul>
         </nav>
         <ul class="main-list">
@@ -92,7 +90,7 @@
     </main>
     <footer class="footer">
         <p class="footer-logo" style="color: #2196F3;">Web<span style="color: #212121;">Studio</span></p>
-        <p class="footer-">м. Київ, пр-т Лесі Українки, 26</p>
+        <p class="footer-info">м. Київ, пр-т Лесі Українки, 26</p>
         <address class="address">
             <a class="footer-mailto" href="mailto:info@example.com">info@example.com</a>
             <a class="footer-tel" href="tel:+380961111111">+38 096 111 11 11</a>
