--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         <section id="section3" class="section2">
             <div class="container">
                 <h2 class="section2-chim">Чим ми займаємося</h2>
-                <ul class="section2-chim1">
+                <ul class="section2-chimf">
                     <li class="section2-li"> <img class="section2-img" src="./fotos/laptop.png" alt="Foto"></li>
                     <li class="section2-li"> <img class="section2-img" src="./fotos/telefon.png" alt="Foto"></li>
                     <li class="section2-li"> <img class="section2-img" src="./fotos/tablet.png" alt="Foto"></li>
@@ -86,24 +86,32 @@
                 <h2 class="section3-ourt">Наша команда</h2>
                 <ul class="section3-ourteam">
                     <li class="section3-li">
-                        <img class="section3-img" src="./fotos/man.png" alt="Foto">
-                        <h3 class="section3-h3">Ігор Дем'яненко</h3>
-                        <p class="section3-p">Product Designer</p>
+                        <div class="section3-card">
+                            <img class="section3-img" src="./fotos/man.png" alt="Foto">
+                            <h3 class="section3-h3">Ігор Дем'яненко</h3>
+                            <p class="section3-p">Product Designer</p>
+                        </div>
                     </li>
                     <li class="section3-li1">
-                        <img class="section3-img" src="./fotos/woman.jpg" alt="Foto">
-                        <h3 class="section3-h3">Ольга Рєпіна</h3>
-                        <p class="section3-p">Frontend Developer</p>
+                        <div class="section3-card">
+                            <img class="section3-img" src="./fotos/woman.jpg" alt="Foto">
+                            <h3 class="section3-h3">Ольга Рєпіна</h3>
+                            <p class="section3-p">Frontend Developer</p>
+                        </div>
                     </li>
                     <li class="section3-li">
-                        <img class="section3-img" src="./fotos/man2.png" alt="Foto">
-                        <h3 class="section3-h3">Микола Тарасов</h3>
-                        <p class="section3-p">Marketing</p>
+                        <div class="section3-card">
+                            <img class="section3-img" src="./fotos/man2.png" alt="Foto">
+                            <h3 class="section3-h3">Микола Тарасов</h3>
+                            <p class="section3-p">Marketing</p>
+                        </div>
                     </li>
                     <li class="section3-li">
-                        <img class="section3-img" src="./fotos/man3.png" alt="Foto">
-                        <h3 class="section3-h3">Михайло Єрмаков</h6>
-                        <p class="section3-p">UI Designer</p>
+                        <div class="section3-card">
+                            <img class="section3-img" src="./fotos/man3.png" alt="Foto">
+                            <h3 class="section3-h3">Михайло Єрмаков</h6>
+                                <p class="section3-p">UI Designer</p>
+                        </div>
                     </li>
                 </ul>
             </div>
