--- a/index.html
+++ b/index.html
@@ -19,26 +19,27 @@
 
 <body>
     <header class="header">
-        <div class="container">
-            <p class="header-logo" style="color: #2196F3;">Web<span style="color: black;">Studio</span></p>
+        <div class="container header-container">
+
+            <p class="header-logo" style="color: #2196F3;">
+                Web<span style="color: black;">Studio</span>
+            </p>
+
             <nav class="topnav">
                 <ul class="header-list">
-                    <li class="header-li"><a class="header-a" class="header-a-ho" class="header-a-ho"
-                            href="./index.html">Студія</a></li>
-                    <li class="header-li"><a class="header-a" class="header-a-ho" href="./page2.html">Портфоліо</a></li>
-                    <li class="header-li"><a class="header-a" class="header-a-ho" href="./page3.html">Контакти</a></li>
-                </ul>
-            </nav>
+                    <li><a class="header-a header-a-ho" href="./index.html">Студія</a></li>
+                    <li><a class="header-a header-a-ho" href="./page2.html">Портфоліо</a></li>
+                    <li><a class="header-a header-a-ho" href="./page3.html">Контакти</a></li>
 
-            <ul class="header-nav">
-                <li class="header-li"><a class="header-mailto" class="header-mailto-ho"
-                        href="mailto:info@devstudio.com">info@devstudio.com</a>
-                </li>
-                <li class="header-li"><a class="header-tel" class="header-tel-ho" href="tel:+380961111111">+38 096 111
-                        11 11</a></li>
-            </ul>
+                    </li>
+                </ul>
+                <a class="header-mailto header-mailto-ho" href="mailto:info@devstudio.com">info@devstudio.com</a>
+                <a class="header-tel header-tel-ho" href="tel:+380961111111">+38 096 111 11 11</a>
+
+            </nav>
         </div>
     </header>
+
     <main class="main">
         <div class="container">
             <section id="section1" class="main-base">
