--- a/index.html
+++ b/index.html
@@ -39,13 +39,12 @@
             </nav>
         </div>
     </header>
-
     <main class="main">
-        <div class="container">
-            <section id="section1" class="main-base">
-                <h1 class="main-h1">Ефективні рішення для вашого бізнесу</h1>
-                <button class="main-button" type="button">Замовити послугу</button>
-        </div>
+        <section id="section1" class="main-base">
+            <div class="container"></div>
+            <h1 class="main-h1">Ефективні рішення для вашого бізнесу</h1>
+            <button class="main-button" type="button">Замовити послугу</button>
+            </div>
         </section>
         <section id="section2" class="Uvahasec">
             <div class="container">
