--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 Web<span style="color: black;">Studio</span>
             </p>
 
-            <nav class="topnav">
+            <nav class="header-nav">
                 <ul class="header-list">
                     <li><a class="header-a header-a-ho" href="./index.html">Студія</a></li>
                     <li><a class="header-a header-a-ho" href="./page2.html">Портфоліо</a></li>
