--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
         rel="stylesheet">
-    <link rel="stylesheet" href="./css/reset.css">
     <link rel="stylesheet" href="./css/normalize.css">
+    <link rel="stylesheet" href="./css/reset.css">
     <link rel="stylesheet" href="./css/styles.css">
 </head>
 
@@ -123,7 +123,7 @@
             <p class="footer-logo" style="color: #2196F3;">Web<span style="color: rgb(255, 255, 255);">Studio</span></p>
             <address class="footer-adr">
                 <p class="footer-p"> м. Київ, пр-т Лесі Українки, 26</p>
-                <a class="footer-mailto" href="mailto:info@devstudio.com">info@devstudio.com</a><br>
+                <a class="footer-mailto" href="mailto:info@devstudio.com">info@devstudio.com</a>
                 <a class="footer-tel" href="tel:+380961111111">+38 096 111 11 11</a>
             </address>
     </footer>
