--- a/index.html
+++ b/index.html
@@ -55,16 +55,16 @@
                         </p>
                     </li>
                     <li class="Uvaga-li">
-                        <h2 class="Uvaga-h2">ПУНКТУАЛЬНІСТЬ</h2>
+                        <h2 class="Uvaga-h2 Punktualnist">ПУНКТУАЛЬНІСТЬ</h2>
                         <p class="Uvaga-p">Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.
                         </p>
                     </li>
                     <li class="Uvaga-li">
-                        <h2 class="Uvaga-h2">ПЛАНУВАННЯ</h2>
+                        <h2 class="Uvaga-h2 Plan">ПЛАНУВАННЯ</h2>
                         <p class="Uvaga-p">Так само консультація з широким активом значною мірою зумовлює.</p>
                     </li>
                     <li class="Uvaga-li">
-                        <h2 class="Uvaga-h2">СУЧАСНІ ТЕХНОЛОГІЇ</h2>
+                        <h2 class="Uvaga-h2 Future">СУЧАСНІ ТЕХНОЛОГІЇ</h2>
                         <p class="Uvaga-p">Значимість цих проблем настільки очевидна, що реалізація планових завдань.
                         </p>
                     </li>
