--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                 <h2 class="section2-chim">Чим ми займаємося</h2>
                 <ul class="section2-chimf">
                     <li class="section2-li"> <img class="section2-img" src="./fotos/laptop.png" alt="Foto"></li>
-                    <li class="section2-li"> <img class="section2-img" src="./fotos/telefon.png" alt="Foto"></li>
+                    <li class="section2-li"> <img class="section2-img" src="./fotos/phone.png" alt="Foto"></li>
                     <li class="section2-li"> <img class="section2-img" src="./fotos/tablet.png" alt="Foto"></li>
                 </ul>
             </div>
