--- a/page2.html
+++ b/page2.html
@@ -50,7 +50,7 @@
             <ul class="info">
                 <li class="info-li">
                     <div class="info-box">
-                        <img class="info-img" src="./fotos/img(14).png" alt="Website">
+                        <img class="info-img" src="./fotos/compute.jpg" alt="Website">
                         <h2 class="info-h2">Технокряк</h2>
                         <p class="info-p">Веб-сайт</p>
                     </div>
