--- a/index.html
+++ b/index.html
@@ -33,17 +33,26 @@
 
                     </li>
                 </ul>
-                <a class="header-mailto header-mailto-ho" href="mailto:info@devstudio.com">info@devstudio.com</a>
-                <a class="header-tel header-tel-ho" href="tel:+380961111111">+38 096 111 11 11</a>
-
+                <div class="header-div">
+                    <svg class="header-svg">
+                        <use href="./fotos/symbol-defs.svg#icon-email"></use>
+                    </svg>
+                    <a class="header-mailto header-mailto-ho" href="mailto:info@devstudio.com">info@devstudio.com</a>
+                </div>
+                <div class="header-div header-div-ho">
+                    <svg class="header-svg">
+                        <use href="./fotos/symbol-defs.svg#icon-phone"></use>
+                    </svg>
+                    <a class="header-tel header-tel-ho" href="tel:+380961111111">+38 096 111 11 11</a>
+                </div>
             </nav>
         </div>
     </header>
     <main class="main">
         <section id="section1" class="main-base">
-            <div class="container"></div>
-            <h1 class="main-h1">Ефективні рішення для вашого бізнесу</h1>
-            <button class="main-button" type="button">Замовити послугу</button>
+            <div class="container">
+                <h1 class="main-h1">Ефективні рішення для вашого бізнесу</h1>
+                <button class="main-button" type="button">Замовити послугу</button>
             </div>
         </section>
         <section id="section2" class="Uvahasec">
@@ -90,6 +99,28 @@
                             <img class="section3-img" src="./fotos/man.png" alt="Foto">
                             <h3 class="section3-h3">Ігор Дем'яненко</h3>
                             <p class="section3-p">Product Designer</p>
+                            <div class="bog">
+                                <div class="ourt-div add">
+                                    <svg class="ourt-svg">
+                                        <use href="./fotos/symbol-defs.svg#icon-instagram"></use>
+                                    </svg>
+                                </div>
+                                <div class="ourt-div">
+                                    <svg class="ourt-svg">
+                                        <use href="./fotos/symbol-defs.svg#icon-twitter"></use>
+                                    </svg>
+                                </div>
+                                <div class="ourt-div">
+                                    <svg class="ourt-svg">
+                                        <use href="./fotos/symbol-defs.svg#icon-facebook"></use>
+                                    </svg>
+                                </div>
+                                <div class="ourt-div">
+                                    <svg class="ourt-svg">
+                                        <use href="./fotos/symbol-defs.svg#icon-linkedin-1"></use>
+                                    </svg>
+                                </div>
+                            </div>
                         </div>
                     </li>
                     <li class="section3-li1">
@@ -97,6 +128,29 @@
                             <img class="section3-img" src="./fotos/woman.jpg" alt="Foto">
                             <h3 class="section3-h3">Ольга Рєпіна</h3>
                             <p class="section3-p">Frontend Developer</p>
+                            <div class="bog">
+                                <div class="ourt-div add">
+                                    <svg class="ourt-svg">
+                                        <use href="./fotos/symbol-defs.svg#icon-instagram"></use>
+                                    </svg>
+                                </div>
+                                <div class="ourt-div">
+                                    <svg class="ourt-svg">
+                                        <use href="./fotos/symbol-defs.svg#icon-twitter"></use>
+
+                                    </svg>
+                                </div>
+                                <div class="ourt-div">
+                                    <svg class="ourt-svg">
+                                        <use href="./fotos/symbol-defs.svg#icon-facebook"></use>
+                                    </svg>
+                                </div>
+                                <div class="ourt-div">
+                                    <svg class="ourt-svg">
+                                        <use href="./fotos/symbol-defs.svg#icon-linkedin-1"></use>
+                                    </svg>
+                                </div>
+                            </div>
                         </div>
                     </li>
                     <li class="section3-li">
@@ -104,6 +158,30 @@
                             <img class="section3-img" src="./fotos/man2.png" alt="Foto">
                             <h3 class="section3-h3">Микола Тарасов</h3>
                             <p class="section3-p">Marketing</p>
+                            <div class="bog">
+                                <div class="ourt-div add">
+                                    <svg class="ourt-svg">
+                                        <use href="./fotos/symbol-defs.svg#icon-instagram"></use>
+                                    </svg>
+                                </div>
+                                <div class="ourt-div">
+                                    <svg class="ourt-svg">
+                                        <use href="./fotos/symbol-defs.svg#icon-twitter"></use>
+                                    </svg>
+                                </div>
+                                <div class="ourt-div">
+                                    <svg class="ourt-svg">
+
+                                        <use href="./fotos/symbol-defs.svg#icon-facebook"></use>
+
+                                    </svg>
+                                </div>
+                                <div class="ourt-div">
+                                    <svg class="ourt-svg">
+                                        <use href="./fotos/symbol-defs.svg#icon-linkedin-1"></use>
+                                    </svg>
+                                </div>
+                            </div>
                         </div>
                     </li>
                     <li class="section3-li">
@@ -111,7 +189,79 @@
                             <img class="section3-img" src="./fotos/man3.png" alt="Foto">
                             <h3 class="section3-h3">Михайло Єрмаков</h6>
                                 <p class="section3-p">UI Designer</p>
+                                <div class="bog">
+                                    <div class="ourt-div add">
+                                        <svg class="ourt-svg">
+                                            <use href="./fotos/symbol-defs.svg#icon-instagram"></use>
+                                        </svg>
+                                    </div>
+                                    <div class="ourt-div">
+                                        <svg class="ourt-svg">
+                                            <use href="./fotos/symbol-defs.svg#icon-twitter"></use>
+                                        </svg>
+                                    </div>
+                                    <div class="ourt-div">
+                                        <svg class="ourt-svg">
+                                            <use href="./fotos/symbol-defs.svg#icon-facebook"></use>
+                                        </svg>
+                                    </div>
+                                    <div class="ourt-div">
+                                        <svg class="ourt-svg">
+                                            <use href="./fotos/symbol-defs.svg#icon-linkedin-1"></use>
+                                        </svg>
+                                    </div>
+                                </div>
                         </div>
+                    </li>
+                </ul>
+            </div>
+        </section>
+        <section class="section client-section">
+            <div class="container clients-container">
+                <h3 class="clients-h3">Постійні клієнти</h3>
+                <ul class="clients-ul">
+                    <li class="clients-list">
+                        <a href="" class="clients-a">
+
+                            <svg class="clients-svg">
+                                <use href="./fotos/symbol-defs.svg#icon-group4"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="clients-list">
+                        <a href="" class="clients-a">
+                            <svg class="clients-svg">
+                                <use href="./fotos/symbol-defs.svg#icon-company"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="clients-list">
+                        <a href="" class="clients-a">
+                            <svg class="clients-svg">
+                                <use href="./fotos/symbol-defs.svg#icon-group2"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="clients-list">
+                        <a href="" class="clients-a">
+                            <svg class="clients-svg">
+                                <use href="/fotos/symbol-defs.svg#icon-kt"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="clients-list">
+                        <a href="" class="clients-a">
+                            <svg class="clients-svg">
+                                <use href="./fotos/symbol-defs.svg#icon-brand"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="clients-list">
+                        <a href="" class="clients-a">
+                            <svg class="clients-svg">
+                                <use href="./fotos/symbol-defs.svg#icon-es"></use>
+                            </svg>
+                        </a>
                     </li>
                 </ul>
             </div>
@@ -120,12 +270,50 @@
     </main>
     <footer class="footer">
         <div class="container">
-            <p class="footer-logo" style="color: #2196F3;">Web<span style="color: rgb(255, 255, 255);">Studio</span></p>
-            <address class="footer-adr">
-                <p class="footer-p"> м. Київ, пр-т Лесі Українки, 26</p>
-                <a class="footer-mailto" href="mailto:info@devstudio.com">info@devstudio.com</a>
-                <a class="footer-tel" href="tel:+380961111111">+38 096 111 11 11</a>
-            </address>
+            <div class="footer-content">
+                <div>
+                    <p class="footer-logo" style="color: #2196F3;">Web<span style="color: rgb(255, 255, 255);">Studio</span></p>
+                    <address class="footer-adr">
+                        <p class="footer-p"> м. Київ, пр-т Лесі Українки, 26</p>
+                        <a class="footer-mailto" href="mailto:info@devstudio.com">info@devstudio.com</a>
+                        <a class="footer-tel" href="tel:+380961111111">+38 096 111 11 11</a>
+                    </address>
+                </div>
+                <div>
+                    <h4 class="footer-h4">приєднуйтесь</h4>
+                    <ul class="footer-ul">
+                        <li class="footer-li">
+                            <a href="" class="footer-a-svg">
+                            <svg class="footer-svg">
+                                <use href="./fotos/symbol-defs.svg#icon-instagram"></use>
+                            </svg>
+                            </a>
+                        </li>
+                        <li class="footer-li">
+                            <a href="" class="footer-a-svg">
+                            <svg class="footer-svg">
+                                <use href="./fotos/symbol-defs.svg#icon-twitter"></use>
+                            </svg>
+                            </a>
+                        </li>
+                        <li class="footer-li">
+                            <a href="" class="footer-a-svg">
+                            <svg class="footer-svg">
+                                <use href="./fotos/symbol-defs.svg#icon-facebook"></use>
+                            </svg>
+                        </a>
+                        </li>
+                        <li class="footer-li">
+                        <a href="" class="footer-a-svg">
+                            <svg class="footer-svg">
+                                <use href="./fotos/symbol-defs.svg#icon-linkedin-1"></use>
+                            </svg>
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
     </footer>
     </div>
 </body>
