--- a/page2.html
+++ b/page2.html
@@ -24,11 +24,18 @@
                     <li class="header-li"><a class="header-a" href="./page3.html">Контакти</a></li>
                 </ul>
             </nav>
-            <ul class="header-list">
-                <li class="header-li"><a class="header-mailto" href="mailto:info@devstudio.com">info@devstudio.com</a>
-                </li>
-                <li class="header-li"><a class="header-tel" href="tel:+380961111111">+38 096 111 11 11</a></li>
-            </ul>
+               <div class="header-div">
+                    <svg class="header-svg">
+                        <use href="./fotos/symbol-defs.svg#icon-email"></use>
+                    </svg>
+                    <a class="header-mailto header-mailto-ho" href="mailto:info@devstudio.com">info@devstudio.com</a>
+                </div>
+                <div class="header-div header-div-ho">
+                    <svg class="header-svg">
+                        <use href="./fotos/symbol-defs.svg#icon-phone"></use>
+                    </svg>
+                    <a class="header-tel header-tel-ho" href="tel:+380961111111">+38 096 111 11 11</a>
+                </div>
         </div>
     </header>
     <main class="main">
@@ -116,14 +123,49 @@
     </section>
     <footer class="footer">
         <div class="container">
-            <p class="footer-logo" style="color: #2196F3;">Web<span style="color: #ffffff;">Studio</span></p>
-            <p class="footer-location">м. Київ, пр-т Лесі Українки, 26</p>
-            <address class="address">
-                <ul class="hotline">
-                    <li><a class="footer-page" href="mailto:info@example.com">info@example.com</a></li>
-                    <li><a class="footer-page" href="tel:+380961111111">+38 096 111 11 11</a></li>
-                </ul>
-            </address>
+            <div class="footer-content">
+                <div>
+                    <p class="footer-logo" style="color: #2196F3;">Web<span style="color: rgb(255, 255, 255);">Studio</span></p>
+                    <address class="footer-adr">
+                        <p class="footer-p">м. Київ, пр-т Лесі Українки, 26</p>
+                        <a class="footer-mailto" href="mailto:info@devstudio.com">info@devstudio.com</a>
+                        <a class="footer-tel" href="tel:+380961111111">+38 096 111 11 11</a>
+                    </address>
+                </div>
+                <div>
+                    <h4 class="footer-h4">приєднуйтесь</h4>
+                    <ul class="footer-ul">
+                        <li class="footer-li">
+                            <a href="" class="footer-a-svg">
+                            <svg class="footer-svg">
+                                <use href="./fotos/symbol-defs.svg#icon-instagram"></use>
+                            </svg>
+                            </a>
+                        </li>
+                        <li class="footer-li">
+                            <a href="" class="footer-a-svg">
+                            <svg class="footer-svg">
+                                <use href="./fotos/symbol-defs.svg#icon-twitter"></use>
+                            </svg>
+                            </a>
+                        </li>
+                        <li class="footer-li">
+                            <a href="" class="footer-a-svg">
+                            <svg class="footer-svg">
+                                <use href="./fotos/symbol-defs.svg#icon-facebook"></use>
+                            </svg>
+                        </a>
+                        </li>
+                        <li class="footer-li">
+                        <a href="" class="footer-a-svg">
+                            <svg class="footer-svg">
+                                <use href="./fotos/symbol-defs.svg#icon-linkedin-1"></use>
+                            </svg>
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
         </div>
     </footer>
 </body>
