--- a/page2.html
+++ b/page2.html
@@ -173,6 +173,19 @@
                         </li>
                     </ul>
                 </div>
+                <div class="footer-place">
+                    <h5 class="footer-h5-place">Підпишіться на розсилку</h5>
+                    <ul class="footer-ul-place">
+                        <li class="footer-li-place"><input class="footer-input-place" type="text" placeholder="E-mail">
+                        </li>
+                        <li class="footer-li-place aka"><button class="footer-button-place">Підписатися<svg
+                                    class="footer-svg-place" xmlns="http://www.w3.org/2000/svg">
+                                    <path
+                                        d="M24 0L0 13.5L7.66994 16.3407L19.5 5.25002L10.5017 17.3896L10.509 17.3923L10.5 17.3896V24.0001L14.8013 18.982L20.2501 21.0001L24 0Z" />
+                                </svg></button>
+                        </li>
+                    </ul>
+                </div>
             </div>
         </div>
     </footer>
